--- a/_config.yml
+++ b/_config.yml
@@ -1,69 +1,26 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely edit after that. If you find
-# yourself editing this file very often, consider using Jekyll's data files
-# feature for the data you need to update frequently.
-#
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
+title: Wiki
 
-# Site settings
-# These are used to personalize your new site. If you look in the HTML files,
-# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
-# You can create any custom variable you would like, and they will be accessible
-# in the templates via {{ site.myvariable }}.
-title: Passbolt | Help
-email: contact@passbolt.com
-description: >- # this means to ignore newlines until "baseurl:"
-  The help site for passbolt, the open source password manager for teams.
-  This site contains frequently asked questions, article to troubleshoot common issues,
-  installation tutorials, blueprints for developers, and more!
+baseurl: ''
+url: https://example.com
 
-baseurl: ""
-url: "https://help.passbolt.com"
+#disqus: https://your-disqus-url.disqus.com
 
-twitter_username: passbolt
-github_username:  passbolt
-timezone: CET
+github:
+  org: adborden
+  repository: jekyll-theme-wiki
 
-# Build settings
-markdown: kramdown
-plugins:
-  - jekyll-feed
-  - jekyll-sitemap
-  - jekyll-redirect-from
-
-# Additional folders and collections
-include: ['_pages']
 collections:
-  faq:
-    category: nil
+  wiki:
     output: true
-    default:
-      layout: default
-  releases:
-    category: nil
-    output: true
-    default:
-      layout: default
-  incidents:
-    category: nil
-    output: true
-    default:
-      layout: incidents
+    permalink: /wiki/:path/
 
-destination: docs
-
-# Exclude from processing.
-exclude:
-  - LICENSE
-  - doc
-  - package.json
-  - package-lock.json
-  - Gruntfile.js
-  - node_modules
-  - Gemfile
-  - Gemfile.lock
-  - .idea/workspace.xml
-  - vendor
+defaults:
+  - scope:
+      path: ''
+    values:
+      layout: page
+  - scope:
+      type: wiki
+    values:
+      layout: wiki-page
+      comments: true
