--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Wiki
 
 baseurl: ''
-url: https://example.com
+url: https://ntubmlab.github.io/NTUBMLab_Wiki/
 
 #disqus: https://your-disqus-url.disqus.com
 
