--- a/_config.yml
+++ b/_config.yml
@@ -1,26 +1,3 @@
-title: Wiki
-
-baseurl: ''
-url: https://ntubmlab.github.io/NTUBMLab_Wiki/
-
-#disqus: https://your-disqus-url.disqus.com
-
-github:
-  org: adborden
-  repository: jekyll-theme-wiki
-
-collections:
-  wiki:
-    output: true
-    permalink: /wiki/:path/
-
-defaults:
-  - scope:
-      path: ''
-    values:
-      layout: page
-  - scope:
-      type: wiki
-    values:
-      layout: wiki-page
-      comments: true
+title: NTUBMLab_Wiki
+description: A awesome website
+remote_theme: "mmistakes/jekyll-theme-basically-basic@1.4.5"
