--- a/_config.yml
+++ b/_config.yml
@@ -26,8 +26,8 @@ author:
 twitter_username:
 github_username:
 logo: # path of site logo, e.g. "/assets/images/logo.png"
-search: # true, false (default)
-search_full_content: false # true, false (default)
+search: true 
+search_full_content: false 
 search_provider: # lunr (default), algolia
 algolia:
   application_id: # YOUR_APPLICATION_ID
@@ -82,4 +82,4 @@ defaults:
       type: posts
     values:
       layout: post
-      read_time: true
+      read_time: true 
