--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,5 @@
 site_name: MkDocs Bootstrap Theme
-site_url: http://mkdocs.github.io/mkdocs-bootstrap/
-site_description: MkDocs Bootstrap Theme
-site_author: Tom Christie & Dougal Matthews
+site_url: https://ntubmlab.github.io/NTUBMLab_Wiki/
 
 repo_url: https://ntubmlab.github.io/NTUBMLab_Wiki/
 
