--- a/.github/workflows/deploy-release.yml
+++ b/.github/workflows/deploy-release.yml
@@ -24,6 +24,9 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip setuptools wheel build
+          pip install mkdocs
+          pip install mkdocs-codeinclude-plugin
+          pip install mkdocs-bootstrap
       - name: Build
         run: |
           python -m build
