--- a/.github/workflows/deploy-release.yml
+++ b/.github/workflows/deploy-release.yml
@@ -51,3 +51,9 @@ jobs:
         if: success()
         run: |
           python -m mkdocs gh-deploy --clean --verbose
+          
+      - name: Install MkDocs and plugins
+        run: |
+          pip install mkdocs 
+          mkdocs-codeinclude-plugin 
+          mkdocs-bootstrap
