--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,3 +27,6 @@ jobs:
       - name: Deploy to GitHub Pages
         run: |
           mkdocs gh-deploy --force
+      - name: Install dependencies
+        run: |
+          pip install mkdocs-material mkdocs-codeinclude-plugin
